# model_tester

./: README.md  generate_optimized_cpp_for_xcore.py
device_app/: Makefile
device_app/src/: XCORE-AI-EXPLORER-800.xn  image.h  support.cpp
host_app/: CMakeLists.txt
host_app/src/: image.h  main.cpp
models/: README.md
